[gd_scene load_steps=4 format=3 uid="uid://dp1i1al63gcb2"]

[ext_resource type="Script" path="res://weapons/weapon_shotgun_1.gd" id="1_s5im7"]
[ext_resource type="PackedScene" uid="uid://ibp5vny3xvos" path="res://mesh/scenes/shotgun_1_mesh.tscn" id="2_lwacd"]
[ext_resource type="Texture2D" uid="uid://c4skoyuisbck" path="res://textures/crosshairs/crosshair_1.png" id="3_qsxx0"]

[node name="Weapon_shotgun_1" type="Node3D" groups=["weapon"]]
script = ExtResource("1_s5im7")

[node name="shotgun_1_mesh" parent="." instance=ExtResource("2_lwacd")]
transform = Transform3D(-4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 0.5, -0.5, -0.75)

[node name="Muzzle" type="Node3D" parent="shotgun_1_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 1.75, 4.76837e-07)

[node name="RayCastC" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
collision_mask = 5
collide_with_areas = true
debug_shape_thickness = 3

[node name="RayCastUL" type="RayCast3D" parent="."]
transform = Transform3D(0.996195, 0.00759612, 0.0868241, 0, 0.996195, -0.0871557, -0.0871557, 0.0868241, 0.992404, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 5
collide_with_areas = true
debug_shape_thickness = 3

[node name="RayCastUR" type="RayCast3D" parent="."]
transform = Transform3D(0.996195, -0.00759612, -0.0868241, 0, 0.996195, -0.0871557, 0.0871557, 0.0868241, 0.992404, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 5
collide_with_areas = true
debug_shape_thickness = 3

[node name="RayCastDL" type="RayCast3D" parent="."]
transform = Transform3D(0.996195, -0.00759612, 0.0868241, 0, 0.996195, 0.0871557, -0.0871557, -0.0868241, 0.992404, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 5
collide_with_areas = true
debug_shape_thickness = 3

[node name="RayCastDR" type="RayCast3D" parent="."]
transform = Transform3D(0.996195, 0.00759612, -0.0868241, 0, 0.996195, 0.0871557, 0.0871557, -0.0868241, 0.992404, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 5
collide_with_areas = true
debug_shape_thickness = 3

[node name="RPMTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="AmmoLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="CrossHairTexture" type="TextureRect" parent="HUD"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qsxx0")

[connection signal="timeout" from="RPMTimer" to="." method="_on_rpm_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
